Fixed return type for code generation